<resources>
    <string name="app_name">Recipier</string>
    <string name="title_all_recipes">Recipes</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_random">Random</string>
    <string name="recipier">Recipier</string>
    <string name="logo_description">Recipier logo</string>
    <string name="splash_page_description">Recipier splash page showing food, tomatoes, spaguetti, a bowl with passata and a white spoon. Recipier logo.</string>
    <string name="add_a_new_recipe">Add a new recipe</string>
    <string name="icon_to_add_a_photo">Icon to add a photo</string>
    <string name="main_photo_of_the_recipe">Photo of the recipe</string>
    <string name="add_recipe_title">Recipe Title</string>
    <string name="add_recipe_type">Recipe Type</string>
    <string name="add_recipe_category">Category</string>
    <string name="add_recipe_ingredients">Ingredients</string>
    <string name="add_recipe_cooking_time_in_minutes">Cooking Time in minutes</string>
    <string name="add_recipe_direction_to_cook">Direction to Cook</string>
    <string name="add_recipe_button_text">ADD RECIPE</string>
    <string name="update_recipe_button_text">UPDATE RECIPE</string>
    <string name="title_select_image_from">SELECT IMAGE FROM</string>
    <string name="dialog_image_selection_camera">CAMERA</string>
    <string name="dialog_image_selection_gallery">GALLERY</string>
    <string name="got_camera_permissions">You have camera permissions now.</string>
    <string name="permissions_off_dialog_text">It looks like you have turn off permissions required for this feature. It can be enabled under Application Settings.</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="cancel">CANCEL</string>
    <string name="you_got_gallery_permissions">You got Gallery permissions</string>
    <string name="permission_to_gallery_denied">You have denied the storage permission to select the image.</string>
    <string name="select_an_option">SELECT AN OPTION</string>
    <string name="filter_options_title">FILTER YOUR RECIPES BY</string>
    <string name="add_recipe_form_error_picture">Oops, this recipe has no picture!</string>
    <string name="add_recipe_form_error_title">Give a title to your recipe!</string>
    <string name="add_recipe_form_error_type">Select this recipe type!</string>
    <string name="add_recipe_form_error_category">Select this recipe category!</string>
    <string name="add_recipe_form_error_ingredients">It\'s not a recipe if it hasn\'t some ingredients</string>
    <string name="add_recipe_form_error_time">How long would it take to prepare it?</string>
    <string name="add_recipe_form_error_directions">Give some instructions!</string>
    <string name="recipe_data_recorded_to_database_success">You successfully added your recipe to your Recipier book!</string>
    <string name="recipe_data_updated_in_database_success">You successfully modified your recipe!</string>
    <string name="image_of_this_recipe">Image of this recipe</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="step_by_step">Step by step</string>
    <string name="description_clock_icon">Clock icon</string>
    <string name="description_ingredients_icon">Ingredients icon</string>
    <string name="description_instructions_icon">Instructions icon</string>
    <string name="approx_cooking_time">Approx. cooking time:</string>
    <string name="removed_from_favorites_toast">This recipe has been removed from your favorites</string>
    <string name="add_to_favorites_toast">This recipe is now a favorite!</string>
    <string name="all_recipes_no_recipe_added_yet">You haven\'t added any recipe yet.\n\nAdd some now by tapping the button below!</string>
    <string name="all_recipes_no_recipes_filter_result">Oops, it seems you don\'t have any recipe that matches that filter in your Recipier Book.\n\nBut you can add your first one now!</string>
    <string name="favorite_recipe_screen_no_favorites_yet">You haven\'t selected any favorite recipe yet.\nAdd some today!</string>
    <string name="random_recipe_screen_no_recipe_yet">A random recipe will show up here.\nCheck later!</string>
    <string name="add_recipe_icon">Add recipe icon</string>
    <string name="add">Add</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="edit_this_recipe">Edit this recipe</string>
    <string name="delete_this_recipe">Delete recipe</string>
    <string name="erase_recipe_dialog_title">ERASE RECIPE?</string>
    <string name="erase_recipe_dialog_body_message">This recipe will be erased.\nAre you sure you want to proceed?</string>
    <string name="erase_recipe_sub_dialog_body_message">Are you REALLY, REALLY sure you want to delete this recipe? This cannot be undone</string>
    <string name="erase_recipe_dialog_positive_button">YES, SURE</string>
    <string name="erase_recipe_dialog_negative_button">NO</string>
    <string name="erase_recipe_sub_dialog_positive_button">YES, REALLY SURE</string>
    <string name="erase_recipe_sub_dialog_negative_button">NO, WAIT</string>
    <string name="recipe_erased_toast">This recipe has been erased</string>
    <string name="recipe_saved_toast">This recipe has been saved to your Recipier book!</string>
    <string name="filter">Filter</string>
    <string name="arrow_pointing_down_icon">Arrow pointing down icon</string>
    <string name="other_tag">Other</string>
    <string name="save_this_recipe">Save this recipe</string>
    <string name="you_have_this_recipe">You already have this recipe!</string>
    <string name="share">SHARE</string>
    <string name="notify_work">Recipier Notify Work</string>
    <string name="notification_title_new_recipe">Check out this new recipe!</string>
    <string name="notification_subtitle">Tap for more details</string>
</resources>