<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_recipes">

    <fragment
        android:id="@+id/navigation_all_recipes"
        android:name="com.amartgar.recipier.ui.main.view.fragments.AllRecipesFragment"
        android:label="@string/title_all_recipes"
        tools:layout="@layout/fragment_all_recipes">
        <action
            android:id="@+id/nav_action_from_all_recipes_to_recipe_details"
            app:destination="@id/navigation_recipe_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.amartgar.recipier.ui.main.view.fragments.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites">
        <action
            android:id="@+id/nav_action_from_favourites_to_recipe_details"
            app:destination="@id/navigation_recipe_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random"
        android:name="com.amartgar.recipier.ui.main.view.fragments.RandomFragment"
        android:label="@string/title_random"
        tools:layout="@layout/fragment_random" />

    <fragment
        android:id="@+id/navigation_recipe_details"
        android:name="com.amartgar.recipier.ui.main.view.fragments.RecipeDetailsFragment"
        android:label="@string/title_recipe_details"
        tools:layout="@layout/fragment_recipe_details">
        <argument
            android:name="recipe_details"
            app:argType="com.amartgar.recipier.data.model.entities.Recipier" />
    </fragment>
</navigation>