<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.view.activities.AddUpdateRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_add_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_recipe_photo_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightGreyBackground"
                    android:contentDescription="@string/main_photo_of_the_recipe"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_add_recipe_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:background="@color/primaryDarkColor"
                    android:contentDescription="@string/icon_to_add_a_photo"
                    android:padding="@dimen/generic_padding"
                    android:src="@drawable/ic_add_photo" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_title"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_add_recipe_image">

                <EditText
                    android:id="@+id/et_add_recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_type"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_title">

                <EditText
                    android:id="@+id/et_add_recipe_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_category"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_category"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_type">

                <EditText
                    android:id="@+id/et_add_recipe_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_ingredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_ingredients"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_category">

                <EditText
                    android:id="@+id/et_add_recipe_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:overScrollMode="always"
                    android:scrollbarFadeDuration="2000"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_cooking_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_cooking_time_in_minutes"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_ingredients">

                <EditText
                    android:id="@+id/et_add_recipe_cooking_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="number"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_add_recipe_direction"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_area_height"
                android:layout_marginStart="@dimen/generic_margin"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:hint="@string/add_recipe_direction_to_cook"
                app:hintTextColor="@color/primaryDarkColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_cooking_time">

                <EditText
                    android:id="@+id/et_add_recipe_direction"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine|textCapSentences"
                    android:overScrollMode="always"
                    android:scrollbarFadeDuration="2000"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/paragraph" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_recipe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_generic_height"
                android:layout_margin="@dimen/generic_margin"
                android:text="@string/add_recipe_button_text"
                android:textSize="@dimen/h5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_add_recipe_direction" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>