<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/generic_padding">

    <TextView
        android:id="@+id/tv_dialog_image_selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/generic_margin"
        android:layout_marginTop="@dimen/generic_margin"
        android:layout_marginEnd="@dimen/generic_margin"
        android:text="@string/title_select_image_from"
        android:textAlignment="center"
        android:textSize="@dimen/h5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_dialog_image_selection_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/generic_margin"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_image_selection_title" />

    <TextView
        android:id="@+id/tv_dialog_image_selection_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/generic_margin"
        android:layout_marginTop="@dimen/generic_margin"
        android:layout_marginEnd="@dimen/generic_margin"
        android:layout_marginBottom="@dimen/generic_margin"
        android:gravity="center"
        android:text="@string/dialog_image_selection_camera"
        app:drawableTopCompat="@drawable/ic_from_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_image_selection_gallery"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_dialog_image_selection_divider" />

    <TextView
        android:id="@+id/tv_dialog_image_selection_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/generic_margin"
        android:layout_marginEnd="@dimen/generic_margin"
        android:layout_marginBottom="@dimen/generic_margin"
        android:gravity="center"
        android:text="@string/dialog_image_selection_gallery"
        app:drawableTopCompat="@drawable/ic_from_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/tv_dialog_image_selection_camera"
        app:layout_constraintTop_toTopOf="@+id/tv_dialog_image_selection_camera" />


</androidx.constraintlayout.widget.ConstraintLayout>